--- a/classic/Dockerfile.autogpt
+++ b/classic/Dockerfile.autogpt
@@ -54,7 +54,7 @@ RUN poetry install --no-cache --no-root --without dev \
     && rm -rf $(poetry env info --path)/src
 ONBUILD COPY original_autogpt/ ./autogpt
 ONBUILD COPY original_autogpt/README.md ./README.md
-ONBUILD RUN mkdir ./data
+# ONBUILD RUN mkdir ./data
 
 FROM autogpt-${BUILD_TYPE} AS autogpt
 RUN poetry install --only-root
